src/test/ui/consts/const-eval/union-ice.stderr
error[E0308]: mismatched types
  --> $DIR/union-ice.rs:14:33
   |
LL | const FIELD3: Field3 = unsafe { UNION.field3 };
   |                                 ^^^^^^^^^^^^ expected Field3 (i64), found i64
   |
   = note: expected type `type Field3`
              found type `i64`

error[E0308]: mismatched types
  --> $DIR/union-ice.rs:18:17
   |
LL |     b: unsafe { UNION.field3 },
   |                 ^^^^^^^^^^^^ expected Field3 (i64), found i64
   |
   = note: expected type `type Field3`
              found type `i64`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
